# Tri

./: .clang-format  .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  Tri.cpp
include/Tri/: Defs.h  DerivedThis.h  EnumArray.h  FiniteState.h  FiniteState2.h  Intersections.h  IsNear.h  Line3d.h  LineSeg2d.h  LineSeg3d.h  LineSegT.h  LineT.h  Matrix3x3.h  Orts3d.h  Plane.h  Point2d.h  Point3d.h  ReadTriangle.h  ResultReaderMachine.h  RunTasksFile.h  Task.h  TasksExecutor.h  Triangle.h  ValueRange.h  Vector2d.h  Vector2dT.h  Vector3d.h  Vector3dT.h
samples/: error.txt  input01.txt  input02.txt  input1.txt  wrong.txt
src/: CMakeLists.txt  Intersections.cpp  Line3d.cpp  LineSeg2d.cpp  LineSeg3d.cpp  Matrix3x3.cpp  Orts3d.cpp  Plane.cpp  Point2d.cpp  Point3d.cpp  ReadTriangle.cpp  ResultReaderMachine.cpp  RunTasksFile.cpp  Task.cpp  TasksExecutor.cpp  Triangle.cpp  ValueRange.cpp  Vector2d.cpp  Vector3d.cpp
tests/: CMakeLists.txt  IntersectionsTests.cpp  Orts3dTests.cpp  TasksExecutorTests.cpp  TestEngine.cpp  TestEngine.h  TriTests.cpp  TriangleTests.cpp  Vector3dTests.cpp
