add_library(TriLib)
target_include_directories(TriLib PUBLIC ../include)
target_sources(TriLib 
    PRIVATE
            "Intersections.cpp"
            "Line3d.cpp"
            "LineSeg2d.cpp"
            "LineSeg3d.cpp"
            "Matrix3x3.cpp"
            "Orts3d.cpp"
            "Plane.cpp"
            "Point2d.cpp"
            "Point3d.cpp"
            "ReadTriangle.cpp"
            "ResultReaderMachine.cpp"
            "RunTasksFile.cpp"
            "Task.cpp"
            "TasksExecutor.cpp"
            "Triangle.cpp"
            "ValueRange.cpp"
            "Vector2d.cpp"
            "Vector3d.cpp"
    PUBLIC
            "../include/Tri/Defs.h"
            "../include/Tri/DerivedThis.h"
            "../include/Tri/EnumArray.h"
            "../include/Tri/FiniteState.h"
            "../include/Tri/FiniteState2.h"
            "../include/Tri/Intersections.h"
            "../include/Tri/IsNear.h"
            "../include/Tri/Line3d.h"
            "../include/Tri/LineSeg2d.h"
            "../include/Tri/LineSeg3d.h"
            "../include/Tri/LineSegT.h"
            "../include/Tri/LineT.h"
            "../include/Tri/Matrix3x3.h"
            "../include/Tri/Orts3d.h"
            "../include/Tri/Plane.h"
            "../include/Tri/Point2d.h"
            "../include/Tri/Point3d.h"
            "../include/Tri/ReadTriangle.h"
            "../include/Tri/ResultReaderMachine.h"
            "../include/Tri/RunTasksFile.h"
            "../include/Tri/Task.h"
            "../include/Tri/TasksExecutor.h"
            "../include/Tri/Triangle.h"
            "../include/Tri/ValueRange.h"
            "../include/Tri/Vector2d.h"
            "../include/Tri/Vector2dT.h"
            "../include/Tri/Vector3dT.h"
            "../include/Tri/Vector3d.h")

target_compile_features(TriLib PUBLIC cxx_std_17)

